// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Styles/MaxWidth handles % value 1`] = `
{
  "classNames": [
    "literal",
  ],
  "variables": {
    "--uic-max-w-s": "50%",
  },
}
`;

exports[`Styles/MaxWidth handles px value 1`] = `
{
  "classNames": [
    "literal",
  ],
  "variables": {
    "--uic-max-w-s": "50px",
  },
}
`;

exports[`Styles/MaxWidth handles responsive value 1`] = `
{
  "classNames": [
    "literal",
    "literal--l",
  ],
  "variables": {
    "--uic-max-w-l": "50%",
    "--uic-max-w-s": "50px",
  },
}
`;

exports[`Styles/MaxWidth handles undefined value 1`] = `null`;

exports[`Styles/MaxWidth handles unit value 1`] = `
{
  "classNames": [
    "unit",
  ],
  "variables": {
    "--uic-max-w-s": 5,
  },
}
`;
